# Competition-Algorithms

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/go_to_poi/: local_setup.sh
devel/.private/go_to_poi/include/go_to_poi/: poi.h
devel/.private/go_to_poi/lib/go_to_poi/: go_to_poi  talker_poi  talker_pose
devel/.private/go_to_poi/lib/pkgconfig/: go_to_poi.pc
devel/include/go_to_poi/: poi.h
devel/lib/go_to_poi/: go_to_poi  talker_poi  talker_pose
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  go_to_poi.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/go_to_poi/cmake/: go_to_poi-msg-extras.cmake  go_to_poi-msg-paths.cmake  go_to_poiConfig-version.cmake  go_to_poiConfig.cmake
logs/go_to_poi/: build.cmake.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr
src/go_to_poi/: CMakeLists.txt
src/go_to_poi/src/: go_to_poi.cpp  talker_poi.cpp  talker_pose.cpp
(+24 files in other folders)
